Fix spacing of location bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,7 @@ input {
   height: 2em;
   border: 1px solid black;
   border-radius: 5px;
+  margin-left: 5px;
 }
 
 input:focus {
